package sop.local.auditlog.application.api.dto;

import java.util.UUID;

public record ReadAuditlogByIdQuery(UUID id) {}
