package sop.local.auditlog.application.api.dto;

public record ReadAuditlogByUserIdentifierQuery(String userIdentifier) {}
