package sop.local.valueobjects;

import java.util.UUID;

public interface DomainId {
    UUID value();
}
